# sixaxis-pair_rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: hidapi.rs  main.rs  sixaxis.rs
src/interface/: generic.rs  windows.rs
