[package]
name = "sixaxis_go"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "2.3.0"
macaddr = "1.0.1"

[target.'cfg(not(windows))'.dependencies]
nusb = "0.1.7"

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2.6.1", features = ["windows-native"] }
